# internet-broadcasting-service

./: Cargo.toml  README.md
examples/: encoder.rs
src/: lib.rs
src/canvas/: renderer.rs
src/canvas/shaders/: screen_150.glslf  screen_150.glslv
src/capture/: mod.rs  portaudio.rs  rscam.rs
src/transcoder/: .configuration.rs.swp  configuration.rs
